Bug 1458158 - Correct the weight-difference factor in CalcStyleMatch to favor closer weights, not further ones. r=jwatt